Fix layout breaking for expanded content
This is a one line css fix which prevents links in the expanded content from forcing wider widths.

--- a/pages/stylesheets/all.scss
+++ b/pages/stylesheets/all.scss
@@ -21,7 +21,9 @@ a {
 .small {
   font-size: 1em !important;
   line-height: 1.2em !important;
+  word-break: break-word;
 }
+
 .align-horizontally {
   position: relative;
   float: left;
